Update dependencies and refactor controller methods for improved readability